--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wagner Cruz/title>
+    <title>Wagner Cruz</title>
     
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
